--- a/NOTE/note.ipynb
+++ b/NOTE/note.ipynb
@@ -98,11 +98,17 @@
     "\n",
     "**容器**：*对专门用来装其他对象的数据类型的统称。*\n",
     "\n",
+    "容器的两个层面：\n",
+    "* **底层实现**：内置容器类型使用了什么数据结构？某项操作如何工作？\n",
+    "* **高层抽象**：什么决定了某个对象是不是容器？哪些行为定义了容器？\n",
+    "\n",
     "常见的内建容器类型：\n",
     "* 列表（list）\n",
     "* 元组（tuple）\n",
     "* 字典（dict）\n",
     "* 集合（set）\n",
+    "\n",
+    "#### 底层看容器\n",
     "\n",
     "##### 写更快的代码\n",
     "\n",
@@ -121,11 +127,14 @@
     "\n",
     "2. 在列表头部操作多的场景使用`deque`模块\n",
     "\n",
-    "如需在列表头部操作多，使用`collections.deque`类型替代列表。\n",
+    "如需在列表头部操作多，使用[`collections.deque`](https://docs.python.org/3.7/library/collections.html#collections.deque)类型替代列表。\n",
     "\n",
     "3. 使用集合/字典来判断成员是否存在\n",
     "\n",
-    "> 因为字典与集合都是基于哈希表（Hash Table）数据结构实现的。"
+    "> 判断成员是否存在于某个容器时，用集合比列表更合适，因为`item in {...}`的时间复杂度是`O(1)`，因为字典与集合都是基于哈希表（Hash Table）数据结构实现的。\n",
+    "\n",
+    "\n",
+    "> Hint：关于容器类型的而时间复杂度相关内容：[TimeComplexity](https://wiki.python.org/moin/TimeComplexity)"
    ]
   },
   {
@@ -134,14 +143,148 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 利用生成器表达式替代列表推导表达式\n",
     "test = (i for i in range(1000000000000000000000))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 高层看容器\n",
+    "\n",
+    "每个内置容器类型，其实就是满足了多个接口定义的组合实体。\n",
+    "\n",
+    "面向对象编程中最重要的原则之一：**面向接口而非具体实现来编程**。\n",
+    "\n",
+    "##### 写扩展性更好的代码\n",
+    "\n",
+    "面向容器接口编程\n",
+    "\n",
+    "**让函数依赖“可迭代对象”这个抽象概念，而非实体列表类型。**\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import typing\n",
+    "# 使用生成器特性，实现将超过一定长度的评论用省略号替代\n",
+    "def add_ellipsis_gen(comments: typing.Iterable[str], max_length: int = 12):\n",
+    "    \"\"\"如果可迭代评论里的内容超过max_length，剩下的字符用省略号替代\n",
+    "    \"\"\"\n",
+    "    for comment in comments:\n",
+    "        comment = comment.strip()\n",
+    "        if len(comment) > max_length:\n",
+    "            yield comment[:max_length] + '...'\n",
+    "        else:\n",
+    "            yield comment\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Implementati...\n",
+      "Changed\n",
+      "ABC for gene...\n"
+     ]
+    }
+   ],
+   "source": [
+    "comments = [\n",
+    "    \"Implementation note\",\n",
+    "    \"Changed\",\n",
+    "    \"ABC for generator\",\n",
+    "]\n",
+    "print(\"\\n\".join(add_ellipsis_gen(comments)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Implementati...\n",
+      "Changed\n",
+      "ABC for gene...\n"
+     ]
+    }
+   ],
+   "source": [
+    "comments = (\n",
+    "    \"Implementation note\",\n",
+    "    \"Changed\",\n",
+    "    \"ABC for generator\",\n",
+    ")\n",
+    "print(\"\\n\".join(add_ellipsis_gen(comments)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "无论评论是来自列表、元组或者某个文件，新函数都可以轻松满足。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Implementati...\n",
+      "Changed\n",
+      "ABC for gene...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 处理放在元组里的评论\n",
+    "comments = (\"Implementation note\", \"Changed\", \"ABC for generator\")\n",
+    "print(\"\\n\".join(add_ellipsis_gen(comments)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Implementati...\n",
+      "Changed\n",
+      "ABC for gene...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 处理放在文件里的评论\n",
+    "with open(\"comments.txt\") as fp:\n",
+    "    for comment in add_ellipsis_gen(fp):\n",
+    "        print(comment)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
