--- a/NOTE/note.ipynb
+++ b/NOTE/note.ipynb
@@ -285,6 +285,256 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "将依赖由某个具体的容器类型改为抽象接口后，函数的适用面变得更广了。\n",
+    "\n",
+    "**从高层来看，什么定义了容器？**\n",
+    "> **各个容器类型实现的接口协议定义了容器**。不同的容器类型在我们眼里，应该是*是否可以迭代、是否可以修改、有没有长度*等各种特性的组合。\n",
+    "\n",
+    "> **更多关注容器的抽象属性，而非容器类型本身**。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 常用技巧\n",
+    "\n",
+    "1. 使用元组改善分支代码\n",
+    "\n",
+    "有时，代码里会出现超过三个分支的`if/else`："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "less than 1 second ago\n",
+      "24 seconds ago\n",
+      "10 minutes ago\n",
+      "2 hours ago\n",
+      "1 days ago\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "def from_now(ts):\n",
+    "    \"\"\"接收一个过去的时间戳，返回距离当前时间的相对时间文字描述\n",
+    "    \"\"\"\n",
+    "    now = time.time()\n",
+    "    seconds_delta = int(now - ts)\n",
+    "    if seconds_delta < 1:\n",
+    "        return \"less than 1 second ago\"\n",
+    "    elif seconds_delta < 60:\n",
+    "        return \"{} seconds ago\".format(seconds_delta)\n",
+    "    elif seconds_delta < 3600:\n",
+    "        return \"{} minutes ago\".format(seconds_delta // 60)\n",
+    "    elif seconds_delta < 3600 * 24:\n",
+    "        return \"{} hours ago\".format(seconds_delta // 3600)\n",
+    "    else:\n",
+    "        return \"{} days ago\".format(seconds_delta // (3600 * 24))\n",
+    "\n",
+    "\n",
+    "now = time.time()\n",
+    "print(from_now(now))\n",
+    "print(from_now(now - 24))\n",
+    "print(from_now(now - 600))\n",
+    "print(from_now(now - 7500))\n",
+    "print(from_now(now - 87500))\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在上面的分支代码部分中可以找到一些明显的“**边界**”，**从边界提炼规律是优化这段代码的关键**。\n",
+    "\n",
+    "可以将所有的这些边界放在一个有序元组中，然后配合二分查找模板[`bisect`](https://docs.python.org/zh-cn/3.7/library/bisect.html)，可以大大简化整个函数的控制流："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "less than 1 second ago\n",
+      "24 seconds ago\n",
+      "10 minutes ago\n",
+      "2 hours ago\n",
+      "1 days ago\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "\n",
+    "# BREAKPOINTS 必须是已经排好序的，不然无法进行二分查找\n",
+    "BREAKPOINTS = (1, 60, 3600, 3600 * 24)\n",
+    "TMPLS = (\n",
+    "    # unit, template\n",
+    "    (1, \"less than 1 second ago\"),\n",
+    "    (1, \"{units} seconds ago\"),\n",
+    "    (60, \"{units} minutes ago\"),\n",
+    "    (3600, \"{units} hours ago\"),\n",
+    "    (3600 * 24, \"{units} days ago\"),\n",
+    ")\n",
+    "\n",
+    "def from_now(ts):\n",
+    "    \"\"\"接收一个过去的时间戳，返回距离当前时间的相对时间文字描述\n",
+    "    \"\"\"\n",
+    "    seconds_delta = int(time.time() - ts)\n",
+    "    unit, tmpl = TMPLS[bisect.bisect(BREAKPOINTS, seconds_delta)]\n",
+    "    return tmpl.format(units=seconds_delta // unit)\n",
+    "\n",
+    "\n",
+    "now = time.time()\n",
+    "print(from_now(now))\n",
+    "print(from_now(now - 24))\n",
+    "print(from_now(now - 600))\n",
+    "print(from_now(now - 7500))\n",
+    "print(from_now(now - 87500))\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "除了用元组可以优化过多的`if/else`分支外，有些情况下字典也能被用来做同样的事情。\n",
+    "\n",
+    "2. 在更多地方使用动态解包\n",
+    "\n",
+    "动态解包操作是指使用`*`或`**`运算符将可迭代对象“解开”的行为，可以直接用`**`运算符来快速完成字典的合并操作："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'piglei', 'movies': ['Fight Club']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = {**{\"name\": \"piglei\"}, **{\"movies\": [\"Fight Club\"]}}\n",
+    "\n",
+    "print(user)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以在普通赋值语句中使用`*`运算符来动态地解包可迭代对象。\n",
+    "\n",
+    "3. 使用`next()`函数\n",
+    "\n",
+    "`next()`是一个非常实用的内建函数，接收一个迭代器作为参数，然后返回该迭代器的下一个元素。使用它配合生成器表达式，可以高效的实现“*从列表中查找第一个满足条件的成员*”之类的需求。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [3, 7, 8, 2, 21]\n",
+    "# 获取并 **立即返回** 列表里的第一个偶数\n",
+    "print(next(i for i in numbers if i % 2 ==0))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. 使用有序字典来去重\n",
+    "\n",
+    "字典和集合的结构特点保证了它们的成员不会重复，所以它们经常被用来去重。但是去重后会丢失原有列表的顺序（由底层数据结构“哈希表（Hash Table）”的特点决定的。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 3, 10, 21}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [10, 2, 3, 21, 10, 3]\n",
+    "# 去重但是丢失了顺序\n",
+    "set(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以使用`collections.OrderedDict`模块去重并保留顺序："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 2, 3, 21]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import OrderedDict\n",
+    "list(OrderedDict.fromkeys(l).keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
