更新函数返回技巧部分

--- a/NOTE/note.ipynb
+++ b/NOTE/note.ipynb
@@ -531,10 +531,119 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### 常见误区\n",
+    "\n",
+    "1. 当心那些已经枯竭的迭代器\n",
+    "\n",
+    "**生成器最大的缺点之一就是：它会枯竭**。当完整遍历过它们后，之后的重复遍历就不能拿到任何新内容了。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3]\n",
+    "numbers = (i * 2 for i in numbers)\n",
+    "\n",
+    "# 第一次循环会输出2， 4,6\n",
+    "for number in numbers:\n",
+    "    print(number)\n",
+    "\n",
+    "# 这次循环什么都不会输出，因为迭代器已经枯竭了\n",
+    "for number in numbers:\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python3里的map、filter内建函数也都有一样的特点。\n",
+    "\n",
+    "2. 别在循环体内修改被迭代对象\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 7, 8, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove_even(numbers):\n",
+    "    \"\"\"去掉列表里所有的偶数\n",
+    "    \"\"\"\n",
+    "    for i, number in enumerate(numbers):\n",
+    "        if number % 2 == 0:\n",
+    "            # 有问题的代码\n",
+    "            del numbers[i]\n",
+    "\n",
+    "numbers = [1, 2, 7, 4, 8, 11]\n",
+    "remove_even(numbers)\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "结果中会多出来一个“8”，当在遍历一个列表的同时修改它，被迭代的对象`numbers`在循环过程中被修改了。\n",
+    "\n",
+    "**遍历的下标在不断增长，而列表本身的长度同时又在不断缩减。会导致列表里的一些成员其实根本没有被遍历到**。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 让函数返回结果的技巧\n",
+    "\n",
+    "#### 编程建议\n",
+    "\n",
+    "1. 单个函数不要返回多种类型\n",
+    "\n",
+    "好的函数一定是“**单一职责（Single responsibility）**”的。\n",
+    "\n",
+    "**单一职责意味着一个函数只做好一件事，目的明确**。这样的函数也更不容易在未来因为需求变更而被修改。\n",
+    "\n",
+    "**好的函数应该总是提供稳定的返回值，把调用方的处理成本降到最低**。\n",
+    "\n",
+    "2. 使用`partial`构造新函数\n",
+    "\n",
+    "假设在代码中有一个参数很多的函数`A`，适用性很强，而另一个函数`B`则是完全通过调用`A`来完成工作，是一种类似快捷方式的存在。\n",
+    "\n",
+    "针对这样的场景，可以使用`functools`模块里的[`partial()`](https://docs.python.org/3.6/library/functools.html#functools.partial)函数来简化。\n",
+    "\n",
+    "`partial(func, *args, **kwargs)`基于传入的函数与可变（位置/关键字）参数来构造一个新函数。**所有对新函数的调用，都会在合并了当前调用参数与构造参数后，代理给原始函数处理**。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
