更新异常处理等部分

--- a/NOTE/note.ipynb
+++ b/NOTE/note.ipynb
@@ -638,13 +638,282 @@
     "\n",
     "针对这样的场景，可以使用`functools`模块里的[`partial()`](https://docs.python.org/3.6/library/functools.html#functools.partial)函数来简化。\n",
     "\n",
-    "`partial(func, *args, **kwargs)`基于传入的函数与可变（位置/关键字）参数来构造一个新函数。**所有对新函数的调用，都会在合并了当前调用参数与构造参数后，代理给原始函数处理**。"
+    "`partial(func, *args, **kwargs)`基于传入的函数与可变（位置/关键字）参数来构造一个新函数。**所有对新函数的调用，都会在合并了当前调用参数与构造参数后，代理给原始函数处理**。\n",
+    "\n",
+    "3. 抛出异常，而不是返回结果与错误\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CreateItemError(Exception):\n",
+    "    \"\"\"创建 Item 失败时抛出的异常\"\"\"\n",
+    "\n",
+    "def create_item(name):\n",
+    "    \"\"\"创建一个新的 Item\n",
+    "    \n",
+    "    :raises: 当无法创建时抛出 CreateItemError\n",
+    "    \"\"\"\n",
+    "    if len(name) > MAX_LENGTH_OF_NAME:\n",
+    "        raise CreateItemError('name of item is too long')\n",
+    "    if len(CURRENT_ITEMS) > MAX_ITEMS_QUOTA:\n",
+    "        raise CreateItemError('items if full')\n",
+    "    return Item(name=name)\n",
+    "\n",
+    "def create_for_input():\n",
+    "    name = input()\n",
+    "    try:\n",
+    "        item = create_item(name)\n",
+    "    except CreateItemError as e:\n",
+    "        print(f'create item failed: {e}')\n",
+    "    else:\n",
+    "        print(f'item<{name}> created')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "4. 谨慎使用`None`返回值\n",
+    "\n",
+    "`None`值通常用来表示“**某个应该存在但是缺失的东西**”。\n",
+    "\n",
+    "当使用`None`作为函数返回值时，通常是下面3种情况：\n",
+    "\n",
+    "* 作为操作类函数的默认返回值：当某个操作类函数不需要任何返回值时，通常就会返回`None`。`None`也是不带任何`return`语句函数的默认返回值。\n",
+    "* 作为某些“意料之中”的可能没有的值：有一些函数的目的通常是去尝试性的做某件事情。视情况不同，最终可能有结果，也可能没有结果。**而对调用方来说，“没有结果”完全是意料之中的事情**。\n",
+    "* 作为调用失败时代表“错误结果”的值：有时，`None`也会经常被我妈用来作为函数调用失败时的默认返回值，比如："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "username\n"
+     ]
+    }
+   ],
+   "source": [
+    "class User():\n",
+    "    def __init__(self, username) -> None:\n",
+    "        self.username = username\n",
+    "\n",
+    "\n",
+    "\n",
+    "def validate_username(username):\n",
+    "    return username\n",
+    "\n",
+    "def create_user_from_name(username):\n",
+    "    \"\"\"通过用户名创建一个 User 实例\"\"\"\n",
+    "    if validate_username(username):\n",
+    "        return username\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "user = create_user_from_name(\"username\")\n",
+    "if user:\n",
+    "    print(user)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **函数签名（名称与参数）与None返回值之间是否存在一种“意料之中”的暗示。**\n",
+    "\n",
+    "与`None`返回值相比，抛出异常除了拥有上个场景中提到的那些特点外，还有一个额外的优势：**可以在异常信息里提供出现意料之外结果的原因**，是只返回一个`None`值做不到的。\n",
+    "\n",
+    "5. 合理使用“空对象模式”\n",
+    "\n",
+    "使用`None`值或异常来返回错误结果有一个共同的缺点，就是所有需要使用函数返回值的地方，都必须加上一个`if`或`try/except`防御语句，来判断结果是否正常。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "217.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import decimal\n",
+    "\n",
+    "class CreateAccountError(Exception):\n",
+    "    \"\"\"Unable to create a account error\"\"\"\n",
+    "\n",
+    "class Account:\n",
+    "    \"\"\"一个虚拟的银行账号\"\"\"\n",
+    "\n",
+    "    def __init__(self, username, balance):\n",
+    "        self.username = username\n",
+    "        self.balance = balance\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def from_string(cls, s):\n",
+    "        \"\"\"从字符串初始化一个账号\"\"\"\n",
+    "        try:\n",
+    "            username, balance = s.split()\n",
+    "            balance = decimal.Decimal(float(balance))\n",
+    "        except ValueError:\n",
+    "            raise CreateAccountError('input must follow pattern \"{ACCOUNT_NAME} {BALANCE}\"')\n",
+    "        \n",
+    "        if balance < 0:\n",
+    "            raise CreateAccountError('balance can not be negative')\n",
+    "        return cls(username=username, balance=balance)\n",
+    "\n",
+    "def caculate_total_balance(accounts_data):\n",
+    "    \"\"\"计算所有账号的总金额\"\"\"\n",
+    "    result = 0\n",
+    "    for account_string in accounts_data:\n",
+    "        try:\n",
+    "            user = Account.from_string(account_string)\n",
+    "        except CreateAccountError:\n",
+    "            pass\n",
+    "        else:\n",
+    "            result += user.balance\n",
+    "    return result\n",
+    "\n",
+    "accounts_data = [\n",
+    "    'piglei 96.5',\n",
+    "    'cotton 21',\n",
+    "    'invalid_data',\n",
+    "    'roland $invalid_balance',\n",
+    "    'alfred -3',\n",
+    "    'soufal 100'\n",
+    "]\n",
+    "\n",
+    "print(caculate_total_balance(accounts_data))\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在上面的例子中，如果每次调用`Account.from_string`时，都必须使用`try/except`来捕获可能发生的异常。如果项目里需要调用很多次该函数，这部分的工作就会变得非常繁琐。可以使用**空对象模式（Null object pattern）**来改善。\n",
+    "\n",
+    "**使用一个符合正常结果接口的“空类型”来替代空值返回/抛出异常，以此来降低调用方出来结果的成本**。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "217.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Account:\n",
+    "    \"\"\"一个虚拟的银行账号\"\"\"\n",
+    "\n",
+    "    def __init__(self, username, balance):\n",
+    "        self.username = username\n",
+    "        self.balance = balance\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def from_string(cls, s):\n",
+    "        \"\"\"从字符串初始化一个账号\n",
+    "        \n",
+    "        :returns: 如果输入合法，返回 Account object， 否则返回 NullAccount\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            username, balance = s.split()\n",
+    "            balance = decimal.Decimal(float(balance))\n",
+    "        except ValueError:\n",
+    "            return NullAccount()\n",
+    "\n",
+    "        if balance < 0:\n",
+    "            return NullAccount()\n",
+    "        return cls(username=username, balance=balance)\n",
+    "\n",
+    "class NullAccount:\n",
+    "    username = ''\n",
+    "    balance = 0\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_string(cls, s):\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "def caculcate_total_balance(accounts_data):\n",
+    "    \"\"\"计算所有账号的总金额\"\"\"\n",
+    "    return sum(Account.from_string(s).balance for s in accounts_data)\n",
+    "\n",
+    "accounts_data = [\n",
+    "    'piglei 96.5',\n",
+    "    'cotton 21',\n",
+    "    'invalid_data',\n",
+    "    'roland $invalid_balance',\n",
+    "    'alfred -3',\n",
+    "    'soufal 100'\n",
+    "]\n",
+    "\n",
+    "print(caculate_total_balance(accounts_data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "重新定义`NullAccount`新类型，用来作为`from_string`失败时的错误结果返回。\n",
+    "\n",
+    "调整之后，调用方不必再显式使用`try`语句来处理错误，而是可以假设`Account.from_string`函数总是会返回一个合法的`Account`对象，从而大大简化整个计算逻辑。\n",
+    "\n",
+    "6. 使用生成器函数代替返回列表\n",
+    "\n",
+    "在函数里返回列表特别常见，通常会先初始化一个列表`results=[]`，然后再循环体内使用`results.append(item)`函数填充它，最后在函数的末尾返回。\n",
+    "\n",
+    "可以用生成器函数来简化，就是用`yield item`替代`append`语句。使用生成器的函数通常更简洁、也更具通用性。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def foo_func(items):\n",
+    "    for item in items:\n",
+    "        # ... 处理item后直接使用yield返回\n",
+    "        yield item"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. 限制递归的使用\n",
+    "\n",
+    "当函数返回自身调用时，也就是**递归**发生时。但是Python语言对递归支持的非常有限。\n",
+    "首先，Python语言不支持“尾递归优化”，另外Python对最大递归层级数也有严格的限制。\n",
+    "\n",
+    "**尽量少些递归**。如果一定要使用递归：\n",
+    "* 函数输入数据规模是否稳定，是否一定不会超过`sys.getrecursionlimit()`规定的最大层数限制\n",
+    "* 是否可以通过使用类似`functools.lru_cache`的缓存工具函数来降低递归层数。"
+   ]
   }
  ],
  "metadata": {
